--- a/templates/error.html
+++ b/templates/error.html
@@ -28,7 +28,7 @@
         <img
           width="50"
           height="50"
-          src="{{ url_for('static', filename='images/error.png') }}"
+          src="{{ url_for('static', filename='images/error.jpeg') }}"
           class="rounded mx-auto d-block"
           alt="not found"
         />
