--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -12,6 +12,10 @@
     <input class="form-control" type="text" id="name" name="name" required />
   </div>
   <div class="mb-3">
+    <label for="email" class="form-label">Email:</label>
+    <input class="form-control" type="email" id="email" name="email" required />
+  </div>
+  <div class="mb-3">
     <label for="roll_number" class="form-label">Student ID:</label>
     <input
       class="form-control"
