edited success page

--- a/templates/success.html
+++ b/templates/success.html
@@ -26,9 +26,7 @@
           class="rounded mx-auto d-block"
           alt="successful"
         />
-        <p>
-          <strong>{{ student_name }}</strong> you have successfully registered.
-        </p>
+        <p><strong>{{ student_name }}</strong> has successfully registered.</p>
       </div>
     </div>
     <script
